<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/recipe_cv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:elevation="3dp"
        card_view:cardCornerRadius="12dp">

        <ImageView
            android:id="@+id/rp_image_iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/rp_name_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:fontFamily="@font/robotobold"
            android:textSize="48sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            tools:text="@string/recipe_name"/>


        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end|bottom"
            android:padding="5dp"
            android:src="@mipmap/ic_launcher"/>


        <LinearLayout
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:srcCompat="@drawable/round_people_black_36"/>

            <TextView
                android:paddingTop="6dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:paddingBottom="6dp"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/robotoitalic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/serving_size"
                tools:text="@string/serving_size"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/robotoitalic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/servings"
                android:textStyle="bold"
                android:textSize="18sp"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>